// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one 1`] = `
<div>
  <div>
    lead
  </div>
  <div>
    support
  </div>
</div>
`;

exports[`2. tablet - lead one and one 1`] = `
<div>
  <div>
    <div>
      lead
    </div>
  </div>
  <div />
  <div>
    <div>
      support
    </div>
  </div>
</div>
`;
